--- a/src/App.css
+++ b/src/App.css
@@ -34,3 +34,18 @@
   padding: 5px;
   margin-top: 10px;
 }
+
+.word {
+  margin-top: 100px;
+}
+
+.word .btns {
+  display: flex;
+  justify-content: center;
+  gap: 100px;
+  margin-top: 100px;
+}
+
+.word .btns button {
+  padding: 5px;
+}
