--- a/src/App.css
+++ b/src/App.css
@@ -57,3 +57,18 @@
 .word h1 {
   font-size: 3em;
 }
+
+.end {
+  margin-top: 50px;
+}
+
+.end h1 {
+  margin-top: 30px;
+  margin-bottom: 10px;
+  font-style: italic;
+}
+
+.end h2 {
+  font-weight: 200;
+  margin-bottom: 5px;
+}
